// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Radio /> Checkbox click behaviour should be checked the right checkbox when clicked them in turn 1`] = `
<DocumentFragment>
  .emotion-0 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: var(--pv-size-base-4);
  height: var(--pv-size-base-4);
  border-radius: 50%;
  color: var(--pv-color-gray-6);
  position: relative;
}

.emotion-1 {
  cursor: inherit;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  outline: 0;
  border-radius: 50%;
  border-width: 2px;
  border-style: solid;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  color: var(--pv-color-gray-9);
  border-color: currentColor;
  background-color: transparent;
}

.emotion-1:before {
  top: -7px;
  left: -7px;
  right: -7px;
  bottom: -7px;
  content: "";
  position: absolute;
  border-radius: 50%;
  opacity: 0;
  background-color: currentColor;
  -webkit-transition: opacity 200ms;
  transition: opacity 200ms;
}

.emotion-1:checked+[aria-hidden] {
  color: var(--pv-color-primary);
  opacity: 1;
}

.emotion-1:not(:disabled) {
  cursor: pointer;
}

.emotion-1:not(:disabled):checked {
  color: var(--pv-color-primary-shade-1);
}

.emotion-1:not(:disabled):hover:before {
  opacity: 0.18;
}

.emotion-1:not(:disabled):focus:before {
  opacity: 0.23;
}

.emotion-1:not(:disabled):active:before {
  opacity: 0.3;
}

.emotion-1:disabled {
  cursor: not-allowed;
  color: var(--pv-color-gray-6);
}

.emotion-1:disabled+[aria-hidden] {
  color: inherit;
}

.emotion-1:disabled:checked {
  color: var(--pv-color-gray-7);
}

.emotion-2 {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  pointer-events: none;
}

<label
    class="emotion-0"
    for="1S8OmIOkTcTSmQvAvxdEM"
  >
    <input
      class="emotion-1"
      id="1S8OmIOkTcTSmQvAvxdEM"
      name="test-name"
      type="radio"
    />
    <svg
      aria-hidden="true"
      class="emotion-2"
      fill="none"
      height="24px"
      viewBox="0 0 24 24"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        fill="currentColor"
        r="6"
      />
    </svg>
  </label>
  .emotion-0 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: var(--pv-size-base-4);
  height: var(--pv-size-base-4);
  border-radius: 50%;
  color: var(--pv-color-gray-6);
  position: relative;
}

.emotion-1 {
  cursor: inherit;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  outline: 0;
  border-radius: 50%;
  border-width: 2px;
  border-style: solid;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  color: var(--pv-color-gray-9);
  border-color: currentColor;
  background-color: transparent;
}

.emotion-1:before {
  top: -7px;
  left: -7px;
  right: -7px;
  bottom: -7px;
  content: "";
  position: absolute;
  border-radius: 50%;
  opacity: 0;
  background-color: currentColor;
  -webkit-transition: opacity 200ms;
  transition: opacity 200ms;
}

.emotion-1:checked+[aria-hidden] {
  color: var(--pv-color-primary);
  opacity: 1;
}

.emotion-1:not(:disabled) {
  cursor: pointer;
}

.emotion-1:not(:disabled):checked {
  color: var(--pv-color-primary-shade-1);
}

.emotion-1:not(:disabled):hover:before {
  opacity: 0.18;
}

.emotion-1:not(:disabled):focus:before {
  opacity: 0.23;
}

.emotion-1:not(:disabled):active:before {
  opacity: 0.3;
}

.emotion-1:disabled {
  cursor: not-allowed;
  color: var(--pv-color-gray-6);
}

.emotion-1:disabled+[aria-hidden] {
  color: inherit;
}

.emotion-1:disabled:checked {
  color: var(--pv-color-gray-7);
}

.emotion-2 {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  pointer-events: none;
}

<label
    class="emotion-0"
    for="0jLevUQRzA5QaxHvb9N7I"
  >
    <input
      class="emotion-1"
      id="0jLevUQRzA5QaxHvb9N7I"
      name="test-name"
      type="radio"
    />
    <svg
      aria-hidden="true"
      class="emotion-2"
      fill="none"
      height="24px"
      viewBox="0 0 24 24"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        fill="currentColor"
        r="6"
      />
    </svg>
  </label>
</DocumentFragment>
`;

exports[`<Radio /> Checkbox click behaviour should be checked when clicked 1`] = `
<DocumentFragment>
  .emotion-0 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: var(--pv-size-base-4);
  height: var(--pv-size-base-4);
  border-radius: 50%;
  color: var(--pv-color-gray-6);
  position: relative;
}

.emotion-1 {
  cursor: inherit;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  outline: 0;
  border-radius: 50%;
  border-width: 2px;
  border-style: solid;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  color: var(--pv-color-gray-9);
  border-color: currentColor;
  background-color: transparent;
}

.emotion-1:before {
  top: -7px;
  left: -7px;
  right: -7px;
  bottom: -7px;
  content: "";
  position: absolute;
  border-radius: 50%;
  opacity: 0;
  background-color: currentColor;
  -webkit-transition: opacity 200ms;
  transition: opacity 200ms;
}

.emotion-1:checked+[aria-hidden] {
  color: var(--pv-color-primary);
  opacity: 1;
}

.emotion-1:not(:disabled) {
  cursor: pointer;
}

.emotion-1:not(:disabled):checked {
  color: var(--pv-color-primary-shade-1);
}

.emotion-1:not(:disabled):hover:before {
  opacity: 0.18;
}

.emotion-1:not(:disabled):focus:before {
  opacity: 0.23;
}

.emotion-1:not(:disabled):active:before {
  opacity: 0.3;
}

.emotion-1:disabled {
  cursor: not-allowed;
  color: var(--pv-color-gray-6);
}

.emotion-1:disabled+[aria-hidden] {
  color: inherit;
}

.emotion-1:disabled:checked {
  color: var(--pv-color-gray-7);
}

.emotion-2 {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  pointer-events: none;
}

<label
    class="emotion-0"
    for="0XVx6O2_RFtSFriWj0qwn"
  >
    <input
      class="emotion-1"
      id="0XVx6O2_RFtSFriWj0qwn"
      type="radio"
    />
    <svg
      aria-hidden="true"
      class="emotion-2"
      fill="none"
      height="24px"
      viewBox="0 0 24 24"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        fill="currentColor"
        r="6"
      />
    </svg>
  </label>
</DocumentFragment>
`;

exports[`<Radio /> Checkbox click behaviour should be checked when clicked and defaultChecked has been passed to the component 1`] = `
<DocumentFragment>
  .emotion-0 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: var(--pv-size-base-4);
  height: var(--pv-size-base-4);
  border-radius: 50%;
  color: var(--pv-color-gray-6);
  position: relative;
}

.emotion-1 {
  cursor: inherit;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  outline: 0;
  border-radius: 50%;
  border-width: 2px;
  border-style: solid;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  color: var(--pv-color-gray-9);
  border-color: currentColor;
  background-color: transparent;
}

.emotion-1:before {
  top: -7px;
  left: -7px;
  right: -7px;
  bottom: -7px;
  content: "";
  position: absolute;
  border-radius: 50%;
  opacity: 0;
  background-color: currentColor;
  -webkit-transition: opacity 200ms;
  transition: opacity 200ms;
}

.emotion-1:checked+[aria-hidden] {
  color: var(--pv-color-primary);
  opacity: 1;
}

.emotion-1:not(:disabled) {
  cursor: pointer;
}

.emotion-1:not(:disabled):checked {
  color: var(--pv-color-primary-shade-1);
}

.emotion-1:not(:disabled):hover:before {
  opacity: 0.18;
}

.emotion-1:not(:disabled):focus:before {
  opacity: 0.23;
}

.emotion-1:not(:disabled):active:before {
  opacity: 0.3;
}

.emotion-1:disabled {
  cursor: not-allowed;
  color: var(--pv-color-gray-6);
}

.emotion-1:disabled+[aria-hidden] {
  color: inherit;
}

.emotion-1:disabled:checked {
  color: var(--pv-color-gray-7);
}

.emotion-2 {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  pointer-events: none;
}

<label
    class="emotion-0"
    for="3TBI957Ur7aTz4huVHvXN"
  >
    <input
      checked=""
      class="emotion-1"
      id="3TBI957Ur7aTz4huVHvXN"
      type="radio"
    />
    <svg
      aria-hidden="true"
      class="emotion-2"
      fill="none"
      height="24px"
      viewBox="0 0 24 24"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        fill="currentColor"
        r="6"
      />
    </svg>
  </label>
</DocumentFragment>
`;

exports[`<Radio /> Checkbox click behaviour should calls onChange prop when clicked 1`] = `
<DocumentFragment>
  .emotion-0 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: var(--pv-size-base-4);
  height: var(--pv-size-base-4);
  border-radius: 50%;
  color: var(--pv-color-gray-6);
  position: relative;
}

.emotion-1 {
  cursor: inherit;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  outline: 0;
  border-radius: 50%;
  border-width: 2px;
  border-style: solid;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  color: var(--pv-color-gray-9);
  border-color: currentColor;
  background-color: transparent;
}

.emotion-1:before {
  top: -7px;
  left: -7px;
  right: -7px;
  bottom: -7px;
  content: "";
  position: absolute;
  border-radius: 50%;
  opacity: 0;
  background-color: currentColor;
  -webkit-transition: opacity 200ms;
  transition: opacity 200ms;
}

.emotion-1:checked+[aria-hidden] {
  color: var(--pv-color-primary);
  opacity: 1;
}

.emotion-1:not(:disabled) {
  cursor: pointer;
}

.emotion-1:not(:disabled):checked {
  color: var(--pv-color-primary-shade-1);
}

.emotion-1:not(:disabled):hover:before {
  opacity: 0.18;
}

.emotion-1:not(:disabled):focus:before {
  opacity: 0.23;
}

.emotion-1:not(:disabled):active:before {
  opacity: 0.3;
}

.emotion-1:disabled {
  cursor: not-allowed;
  color: var(--pv-color-gray-6);
}

.emotion-1:disabled+[aria-hidden] {
  color: inherit;
}

.emotion-1:disabled:checked {
  color: var(--pv-color-gray-7);
}

.emotion-2 {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  pointer-events: none;
}

<label
    class="emotion-0"
    for="YGa8Wvqi3zTiNoSC1eFIG"
  >
    <input
      class="emotion-1"
      id="YGa8Wvqi3zTiNoSC1eFIG"
      type="radio"
    />
    <svg
      aria-hidden="true"
      class="emotion-2"
      fill="none"
      height="24px"
      viewBox="0 0 24 24"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        fill="currentColor"
        r="6"
      />
    </svg>
  </label>
</DocumentFragment>
`;

exports[`<Radio /> Checkbox click behaviour should calls onClick prop when clicked 1`] = `
<DocumentFragment>
  .emotion-0 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: var(--pv-size-base-4);
  height: var(--pv-size-base-4);
  border-radius: 50%;
  color: var(--pv-color-gray-6);
  position: relative;
}

.emotion-1 {
  cursor: inherit;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  outline: 0;
  border-radius: 50%;
  border-width: 2px;
  border-style: solid;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  color: var(--pv-color-gray-9);
  border-color: currentColor;
  background-color: transparent;
}

.emotion-1:before {
  top: -7px;
  left: -7px;
  right: -7px;
  bottom: -7px;
  content: "";
  position: absolute;
  border-radius: 50%;
  opacity: 0;
  background-color: currentColor;
  -webkit-transition: opacity 200ms;
  transition: opacity 200ms;
}

.emotion-1:checked+[aria-hidden] {
  color: var(--pv-color-primary);
  opacity: 1;
}

.emotion-1:not(:disabled) {
  cursor: pointer;
}

.emotion-1:not(:disabled):checked {
  color: var(--pv-color-primary-shade-1);
}

.emotion-1:not(:disabled):hover:before {
  opacity: 0.18;
}

.emotion-1:not(:disabled):focus:before {
  opacity: 0.23;
}

.emotion-1:not(:disabled):active:before {
  opacity: 0.3;
}

.emotion-1:disabled {
  cursor: not-allowed;
  color: var(--pv-color-gray-6);
}

.emotion-1:disabled+[aria-hidden] {
  color: inherit;
}

.emotion-1:disabled:checked {
  color: var(--pv-color-gray-7);
}

.emotion-2 {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  pointer-events: none;
}

<label
    class="emotion-0"
    for="2E2_0MCKJ_Amh1QHq810b"
  >
    <input
      class="emotion-1"
      id="2E2_0MCKJ_Amh1QHq810b"
      type="radio"
    />
    <svg
      aria-hidden="true"
      class="emotion-2"
      fill="none"
      height="24px"
      viewBox="0 0 24 24"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        fill="currentColor"
        r="6"
      />
    </svg>
  </label>
</DocumentFragment>
`;

exports[`<Radio /> Checkbox focus behaviour should have focus 1`] = `
<DocumentFragment>
  .emotion-0 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: var(--pv-size-base-4);
  height: var(--pv-size-base-4);
  border-radius: 50%;
  color: var(--pv-color-gray-6);
  position: relative;
}

.emotion-1 {
  cursor: inherit;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  outline: 0;
  border-radius: 50%;
  border-width: 2px;
  border-style: solid;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  color: var(--pv-color-gray-9);
  border-color: currentColor;
  background-color: transparent;
}

.emotion-1:before {
  top: -7px;
  left: -7px;
  right: -7px;
  bottom: -7px;
  content: "";
  position: absolute;
  border-radius: 50%;
  opacity: 0;
  background-color: currentColor;
  -webkit-transition: opacity 200ms;
  transition: opacity 200ms;
}

.emotion-1:checked+[aria-hidden] {
  color: var(--pv-color-primary);
  opacity: 1;
}

.emotion-1:not(:disabled) {
  cursor: pointer;
}

.emotion-1:not(:disabled):checked {
  color: var(--pv-color-primary-shade-1);
}

.emotion-1:not(:disabled):hover:before {
  opacity: 0.18;
}

.emotion-1:not(:disabled):focus:before {
  opacity: 0.23;
}

.emotion-1:not(:disabled):active:before {
  opacity: 0.3;
}

.emotion-1:disabled {
  cursor: not-allowed;
  color: var(--pv-color-gray-6);
}

.emotion-1:disabled+[aria-hidden] {
  color: inherit;
}

.emotion-1:disabled:checked {
  color: var(--pv-color-gray-7);
}

.emotion-2 {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  pointer-events: none;
}

<label
    class="emotion-0"
    for="X_9yGODBMYeWlAaj5WTmx"
  >
    <input
      class="emotion-1"
      id="X_9yGODBMYeWlAaj5WTmx"
      type="radio"
    />
    <svg
      aria-hidden="true"
      class="emotion-2"
      fill="none"
      height="24px"
      viewBox="0 0 24 24"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        fill="currentColor"
        r="6"
      />
    </svg>
  </label>
</DocumentFragment>
`;

exports[`<Radio /> Checkbox focus behaviour shouldn't have focus when disabled has been passed to the component 1`] = `
<DocumentFragment>
  .emotion-0 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: var(--pv-size-base-4);
  height: var(--pv-size-base-4);
  border-radius: 50%;
  color: var(--pv-color-gray-6);
  position: relative;
}

.emotion-1 {
  cursor: inherit;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  outline: 0;
  border-radius: 50%;
  border-width: 2px;
  border-style: solid;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  color: var(--pv-color-gray-9);
  border-color: currentColor;
  background-color: transparent;
}

.emotion-1:before {
  top: -7px;
  left: -7px;
  right: -7px;
  bottom: -7px;
  content: "";
  position: absolute;
  border-radius: 50%;
  opacity: 0;
  background-color: currentColor;
  -webkit-transition: opacity 200ms;
  transition: opacity 200ms;
}

.emotion-1:checked+[aria-hidden] {
  color: var(--pv-color-primary);
  opacity: 1;
}

.emotion-1:not(:disabled) {
  cursor: pointer;
}

.emotion-1:not(:disabled):checked {
  color: var(--pv-color-primary-shade-1);
}

.emotion-1:not(:disabled):hover:before {
  opacity: 0.18;
}

.emotion-1:not(:disabled):focus:before {
  opacity: 0.23;
}

.emotion-1:not(:disabled):active:before {
  opacity: 0.3;
}

.emotion-1:disabled {
  cursor: not-allowed;
  color: var(--pv-color-gray-6);
}

.emotion-1:disabled+[aria-hidden] {
  color: inherit;
}

.emotion-1:disabled:checked {
  color: var(--pv-color-gray-7);
}

.emotion-2 {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  pointer-events: none;
}

<label
    class="emotion-0"
    for="jkQsxX96YZyFqfYyLhtfe"
  >
    <input
      class="emotion-1"
      disabled=""
      id="jkQsxX96YZyFqfYyLhtfe"
      type="radio"
    />
    <svg
      aria-hidden="true"
      class="emotion-2"
      fill="none"
      height="24px"
      viewBox="0 0 24 24"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        fill="currentColor"
        r="6"
      />
    </svg>
  </label>
</DocumentFragment>
`;

exports[`<Radio /> Checkbox keyboard behaviour should be checked after pressed on space 1`] = `
<DocumentFragment>
  .emotion-0 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: var(--pv-size-base-4);
  height: var(--pv-size-base-4);
  border-radius: 50%;
  color: var(--pv-color-gray-6);
  position: relative;
}

.emotion-1 {
  cursor: inherit;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  outline: 0;
  border-radius: 50%;
  border-width: 2px;
  border-style: solid;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  color: var(--pv-color-gray-9);
  border-color: currentColor;
  background-color: transparent;
}

.emotion-1:before {
  top: -7px;
  left: -7px;
  right: -7px;
  bottom: -7px;
  content: "";
  position: absolute;
  border-radius: 50%;
  opacity: 0;
  background-color: currentColor;
  -webkit-transition: opacity 200ms;
  transition: opacity 200ms;
}

.emotion-1:checked+[aria-hidden] {
  color: var(--pv-color-primary);
  opacity: 1;
}

.emotion-1:not(:disabled) {
  cursor: pointer;
}

.emotion-1:not(:disabled):checked {
  color: var(--pv-color-primary-shade-1);
}

.emotion-1:not(:disabled):hover:before {
  opacity: 0.18;
}

.emotion-1:not(:disabled):focus:before {
  opacity: 0.23;
}

.emotion-1:not(:disabled):active:before {
  opacity: 0.3;
}

.emotion-1:disabled {
  cursor: not-allowed;
  color: var(--pv-color-gray-6);
}

.emotion-1:disabled+[aria-hidden] {
  color: inherit;
}

.emotion-1:disabled:checked {
  color: var(--pv-color-gray-7);
}

.emotion-2 {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  pointer-events: none;
}

<label
    class="emotion-0"
    for="6_lwTWXjZl8Qug0ev8QUD"
  >
    <input
      class="emotion-1"
      id="6_lwTWXjZl8Qug0ev8QUD"
      type="radio"
    />
    <svg
      aria-hidden="true"
      class="emotion-2"
      fill="none"
      height="24px"
      viewBox="0 0 24 24"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        fill="currentColor"
        r="6"
      />
    </svg>
  </label>
</DocumentFragment>
`;

exports[`<Radio /> Radio render variants should be checked 1`] = `
<DocumentFragment>
  .emotion-0 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: var(--pv-size-base-4);
  height: var(--pv-size-base-4);
  border-radius: 50%;
  color: var(--pv-color-gray-6);
  position: relative;
}

.emotion-1 {
  cursor: inherit;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  outline: 0;
  border-radius: 50%;
  border-width: 2px;
  border-style: solid;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  color: var(--pv-color-gray-9);
  border-color: currentColor;
  background-color: transparent;
}

.emotion-1:before {
  top: -7px;
  left: -7px;
  right: -7px;
  bottom: -7px;
  content: "";
  position: absolute;
  border-radius: 50%;
  opacity: 0;
  background-color: currentColor;
  -webkit-transition: opacity 200ms;
  transition: opacity 200ms;
}

.emotion-1:checked+[aria-hidden] {
  color: var(--pv-color-primary);
  opacity: 1;
}

.emotion-1:not(:disabled) {
  cursor: pointer;
}

.emotion-1:not(:disabled):checked {
  color: var(--pv-color-primary-shade-1);
}

.emotion-1:not(:disabled):hover:before {
  opacity: 0.18;
}

.emotion-1:not(:disabled):focus:before {
  opacity: 0.23;
}

.emotion-1:not(:disabled):active:before {
  opacity: 0.3;
}

.emotion-1:disabled {
  cursor: not-allowed;
  color: var(--pv-color-gray-6);
}

.emotion-1:disabled+[aria-hidden] {
  color: inherit;
}

.emotion-1:disabled:checked {
  color: var(--pv-color-gray-7);
}

.emotion-2 {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  pointer-events: none;
}

<label
    class="emotion-0"
    for="CYMNxA8i_tL8R7gWUtJJI"
  >
    <input
      checked=""
      class="emotion-1"
      id="CYMNxA8i_tL8R7gWUtJJI"
      type="radio"
    />
    <svg
      aria-hidden="true"
      class="emotion-2"
      fill="none"
      height="24px"
      viewBox="0 0 24 24"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        fill="currentColor"
        r="6"
      />
    </svg>
  </label>
</DocumentFragment>
`;

exports[`<Radio /> Radio render variants should be checked, defaultChecked prop 1`] = `
<DocumentFragment>
  .emotion-0 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: var(--pv-size-base-4);
  height: var(--pv-size-base-4);
  border-radius: 50%;
  color: var(--pv-color-gray-6);
  position: relative;
}

.emotion-1 {
  cursor: inherit;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  outline: 0;
  border-radius: 50%;
  border-width: 2px;
  border-style: solid;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  color: var(--pv-color-gray-9);
  border-color: currentColor;
  background-color: transparent;
}

.emotion-1:before {
  top: -7px;
  left: -7px;
  right: -7px;
  bottom: -7px;
  content: "";
  position: absolute;
  border-radius: 50%;
  opacity: 0;
  background-color: currentColor;
  -webkit-transition: opacity 200ms;
  transition: opacity 200ms;
}

.emotion-1:checked+[aria-hidden] {
  color: var(--pv-color-primary);
  opacity: 1;
}

.emotion-1:not(:disabled) {
  cursor: pointer;
}

.emotion-1:not(:disabled):checked {
  color: var(--pv-color-primary-shade-1);
}

.emotion-1:not(:disabled):hover:before {
  opacity: 0.18;
}

.emotion-1:not(:disabled):focus:before {
  opacity: 0.23;
}

.emotion-1:not(:disabled):active:before {
  opacity: 0.3;
}

.emotion-1:disabled {
  cursor: not-allowed;
  color: var(--pv-color-gray-6);
}

.emotion-1:disabled+[aria-hidden] {
  color: inherit;
}

.emotion-1:disabled:checked {
  color: var(--pv-color-gray-7);
}

.emotion-2 {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  pointer-events: none;
}

<label
    class="emotion-0"
    for="7_tYZus6men7LMkTHsjnu"
  >
    <input
      checked=""
      class="emotion-1"
      id="7_tYZus6men7LMkTHsjnu"
      type="radio"
    />
    <svg
      aria-hidden="true"
      class="emotion-2"
      fill="none"
      height="24px"
      viewBox="0 0 24 24"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        fill="currentColor"
        r="6"
      />
    </svg>
  </label>
</DocumentFragment>
`;

exports[`<Radio /> Radio render variants should be disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: var(--pv-size-base-4);
  height: var(--pv-size-base-4);
  border-radius: 50%;
  color: var(--pv-color-gray-6);
  position: relative;
}

.emotion-1 {
  cursor: inherit;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  outline: 0;
  border-radius: 50%;
  border-width: 2px;
  border-style: solid;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  color: var(--pv-color-gray-9);
  border-color: currentColor;
  background-color: transparent;
}

.emotion-1:before {
  top: -7px;
  left: -7px;
  right: -7px;
  bottom: -7px;
  content: "";
  position: absolute;
  border-radius: 50%;
  opacity: 0;
  background-color: currentColor;
  -webkit-transition: opacity 200ms;
  transition: opacity 200ms;
}

.emotion-1:checked+[aria-hidden] {
  color: var(--pv-color-primary);
  opacity: 1;
}

.emotion-1:not(:disabled) {
  cursor: pointer;
}

.emotion-1:not(:disabled):checked {
  color: var(--pv-color-primary-shade-1);
}

.emotion-1:not(:disabled):hover:before {
  opacity: 0.18;
}

.emotion-1:not(:disabled):focus:before {
  opacity: 0.23;
}

.emotion-1:not(:disabled):active:before {
  opacity: 0.3;
}

.emotion-1:disabled {
  cursor: not-allowed;
  color: var(--pv-color-gray-6);
}

.emotion-1:disabled+[aria-hidden] {
  color: inherit;
}

.emotion-1:disabled:checked {
  color: var(--pv-color-gray-7);
}

.emotion-2 {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  pointer-events: none;
}

<label
    class="emotion-0"
    for="I3J9kA-UgppgIQN47oF50"
  >
    <input
      class="emotion-1"
      disabled=""
      id="I3J9kA-UgppgIQN47oF50"
      type="radio"
    />
    <svg
      aria-hidden="true"
      class="emotion-2"
      fill="none"
      height="24px"
      viewBox="0 0 24 24"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        fill="currentColor"
        r="6"
      />
    </svg>
  </label>
</DocumentFragment>
`;

exports[`<Radio /> Radio render variants should be unchecked 1`] = `
<DocumentFragment>
  .emotion-0 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: var(--pv-size-base-4);
  height: var(--pv-size-base-4);
  border-radius: 50%;
  color: var(--pv-color-gray-6);
  position: relative;
}

.emotion-1 {
  cursor: inherit;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  outline: 0;
  border-radius: 50%;
  border-width: 2px;
  border-style: solid;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  color: var(--pv-color-gray-9);
  border-color: currentColor;
  background-color: transparent;
}

.emotion-1:before {
  top: -7px;
  left: -7px;
  right: -7px;
  bottom: -7px;
  content: "";
  position: absolute;
  border-radius: 50%;
  opacity: 0;
  background-color: currentColor;
  -webkit-transition: opacity 200ms;
  transition: opacity 200ms;
}

.emotion-1:checked+[aria-hidden] {
  color: var(--pv-color-primary);
  opacity: 1;
}

.emotion-1:not(:disabled) {
  cursor: pointer;
}

.emotion-1:not(:disabled):checked {
  color: var(--pv-color-primary-shade-1);
}

.emotion-1:not(:disabled):hover:before {
  opacity: 0.18;
}

.emotion-1:not(:disabled):focus:before {
  opacity: 0.23;
}

.emotion-1:not(:disabled):active:before {
  opacity: 0.3;
}

.emotion-1:disabled {
  cursor: not-allowed;
  color: var(--pv-color-gray-6);
}

.emotion-1:disabled+[aria-hidden] {
  color: inherit;
}

.emotion-1:disabled:checked {
  color: var(--pv-color-gray-7);
}

.emotion-2 {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  pointer-events: none;
}

<label
    class="emotion-0"
    for="aRZoNfmxkSmGARumGAkqE"
  >
    <input
      class="emotion-1"
      id="aRZoNfmxkSmGARumGAkqE"
      type="radio"
    />
    <svg
      aria-hidden="true"
      class="emotion-2"
      fill="none"
      height="24px"
      viewBox="0 0 24 24"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        fill="currentColor"
        r="6"
      />
    </svg>
  </label>
</DocumentFragment>
`;

exports[`<Radio /> Radio render variants should be unchecked, defaultChecked prop 1`] = `
<DocumentFragment>
  .emotion-0 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: var(--pv-size-base-4);
  height: var(--pv-size-base-4);
  border-radius: 50%;
  color: var(--pv-color-gray-6);
  position: relative;
}

.emotion-1 {
  cursor: inherit;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  outline: 0;
  border-radius: 50%;
  border-width: 2px;
  border-style: solid;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  color: var(--pv-color-gray-9);
  border-color: currentColor;
  background-color: transparent;
}

.emotion-1:before {
  top: -7px;
  left: -7px;
  right: -7px;
  bottom: -7px;
  content: "";
  position: absolute;
  border-radius: 50%;
  opacity: 0;
  background-color: currentColor;
  -webkit-transition: opacity 200ms;
  transition: opacity 200ms;
}

.emotion-1:checked+[aria-hidden] {
  color: var(--pv-color-primary);
  opacity: 1;
}

.emotion-1:not(:disabled) {
  cursor: pointer;
}

.emotion-1:not(:disabled):checked {
  color: var(--pv-color-primary-shade-1);
}

.emotion-1:not(:disabled):hover:before {
  opacity: 0.18;
}

.emotion-1:not(:disabled):focus:before {
  opacity: 0.23;
}

.emotion-1:not(:disabled):active:before {
  opacity: 0.3;
}

.emotion-1:disabled {
  cursor: not-allowed;
  color: var(--pv-color-gray-6);
}

.emotion-1:disabled+[aria-hidden] {
  color: inherit;
}

.emotion-1:disabled:checked {
  color: var(--pv-color-gray-7);
}

.emotion-2 {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  pointer-events: none;
}

<label
    class="emotion-0"
    for="aiRtynpeJry38qxqi-eET"
  >
    <input
      class="emotion-1"
      id="aiRtynpeJry38qxqi-eET"
      type="radio"
    />
    <svg
      aria-hidden="true"
      class="emotion-2"
      fill="none"
      height="24px"
      viewBox="0 0 24 24"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        fill="currentColor"
        r="6"
      />
    </svg>
  </label>
</DocumentFragment>
`;

exports[`<Radio /> Radio render variants should forwards ref to label element 1`] = `
<DocumentFragment>
  .emotion-0 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: var(--pv-size-base-4);
  height: var(--pv-size-base-4);
  border-radius: 50%;
  color: var(--pv-color-gray-6);
  position: relative;
}

.emotion-1 {
  cursor: inherit;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  outline: 0;
  border-radius: 50%;
  border-width: 2px;
  border-style: solid;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  color: var(--pv-color-gray-9);
  border-color: currentColor;
  background-color: transparent;
}

.emotion-1:before {
  top: -7px;
  left: -7px;
  right: -7px;
  bottom: -7px;
  content: "";
  position: absolute;
  border-radius: 50%;
  opacity: 0;
  background-color: currentColor;
  -webkit-transition: opacity 200ms;
  transition: opacity 200ms;
}

.emotion-1:checked+[aria-hidden] {
  color: var(--pv-color-primary);
  opacity: 1;
}

.emotion-1:not(:disabled) {
  cursor: pointer;
}

.emotion-1:not(:disabled):checked {
  color: var(--pv-color-primary-shade-1);
}

.emotion-1:not(:disabled):hover:before {
  opacity: 0.18;
}

.emotion-1:not(:disabled):focus:before {
  opacity: 0.23;
}

.emotion-1:not(:disabled):active:before {
  opacity: 0.3;
}

.emotion-1:disabled {
  cursor: not-allowed;
  color: var(--pv-color-gray-6);
}

.emotion-1:disabled+[aria-hidden] {
  color: inherit;
}

.emotion-1:disabled:checked {
  color: var(--pv-color-gray-7);
}

.emotion-2 {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  pointer-events: none;
}

<label
    class="emotion-0"
    for="pxQtmvhtejKDimdPpcQwr"
  >
    <input
      class="emotion-1"
      id="pxQtmvhtejKDimdPpcQwr"
      type="radio"
    />
    <svg
      aria-hidden="true"
      class="emotion-2"
      fill="none"
      height="24px"
      viewBox="0 0 24 24"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        fill="currentColor"
        r="6"
      />
    </svg>
  </label>
</DocumentFragment>
`;

exports[`<Radio /> Radio render variants should have className 1`] = `
<DocumentFragment>
  .emotion-0 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: var(--pv-size-base-4);
  height: var(--pv-size-base-4);
  border-radius: 50%;
  color: var(--pv-color-gray-6);
  position: relative;
}

.emotion-1 {
  cursor: inherit;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  outline: 0;
  border-radius: 50%;
  border-width: 2px;
  border-style: solid;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  color: var(--pv-color-gray-9);
  border-color: currentColor;
  background-color: transparent;
}

.emotion-1:before {
  top: -7px;
  left: -7px;
  right: -7px;
  bottom: -7px;
  content: "";
  position: absolute;
  border-radius: 50%;
  opacity: 0;
  background-color: currentColor;
  -webkit-transition: opacity 200ms;
  transition: opacity 200ms;
}

.emotion-1:checked+[aria-hidden] {
  color: var(--pv-color-primary);
  opacity: 1;
}

.emotion-1:not(:disabled) {
  cursor: pointer;
}

.emotion-1:not(:disabled):checked {
  color: var(--pv-color-primary-shade-1);
}

.emotion-1:not(:disabled):hover:before {
  opacity: 0.18;
}

.emotion-1:not(:disabled):focus:before {
  opacity: 0.23;
}

.emotion-1:not(:disabled):active:before {
  opacity: 0.3;
}

.emotion-1:disabled {
  cursor: not-allowed;
  color: var(--pv-color-gray-6);
}

.emotion-1:disabled+[aria-hidden] {
  color: inherit;
}

.emotion-1:disabled:checked {
  color: var(--pv-color-gray-7);
}

.emotion-2 {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  pointer-events: none;
}

<label
    class="emotion-0 test-cls"
    for="3Puwx4mneqtso_ewc7FGY"
  >
    <input
      class="emotion-1"
      id="3Puwx4mneqtso_ewc7FGY"
      type="radio"
    />
    <svg
      aria-hidden="true"
      class="emotion-2"
      fill="none"
      height="24px"
      viewBox="0 0 24 24"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        fill="currentColor"
        r="6"
      />
    </svg>
  </label>
</DocumentFragment>
`;

exports[`<Radio /> Radio render variants should have custom checked icon 1`] = `
<DocumentFragment>
  .emotion-0 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: var(--pv-size-base-4);
  height: var(--pv-size-base-4);
  border-radius: 50%;
  color: var(--pv-color-gray-6);
  position: relative;
}

.emotion-1 {
  cursor: inherit;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  outline: 0;
  border-radius: 50%;
  border-width: 2px;
  border-style: solid;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  color: var(--pv-color-gray-9);
  border-color: currentColor;
  background-color: transparent;
}

.emotion-1:before {
  top: -7px;
  left: -7px;
  right: -7px;
  bottom: -7px;
  content: "";
  position: absolute;
  border-radius: 50%;
  opacity: 0;
  background-color: currentColor;
  -webkit-transition: opacity 200ms;
  transition: opacity 200ms;
}

.emotion-1:checked+[aria-hidden] {
  color: var(--pv-color-primary);
  opacity: 1;
}

.emotion-1:not(:disabled) {
  cursor: pointer;
}

.emotion-1:not(:disabled):checked {
  color: var(--pv-color-primary-shade-1);
}

.emotion-1:not(:disabled):hover:before {
  opacity: 0.18;
}

.emotion-1:not(:disabled):focus:before {
  opacity: 0.23;
}

.emotion-1:not(:disabled):active:before {
  opacity: 0.3;
}

.emotion-1:disabled {
  cursor: not-allowed;
  color: var(--pv-color-gray-6);
}

.emotion-1:disabled+[aria-hidden] {
  color: inherit;
}

.emotion-1:disabled:checked {
  color: var(--pv-color-gray-7);
}

.emotion-2 {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  pointer-events: none;
}

<label
    class="emotion-0"
    for="fH5g0xFTuyCx4amAPXQN4"
  >
    <input
      class="emotion-1"
      id="fH5g0xFTuyCx4amAPXQN4"
      type="radio"
    />
    <svg
      aria-hidden="true"
      class="emotion-2"
      data-testid="icon"
      fill="none"
      height="24px"
      viewBox="0 0 24 24"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6 12.5h12M12 18.5v-12"
        stroke="currentColor"
        stroke-width="1.5"
      />
    </svg>
  </label>
</DocumentFragment>
`;

exports[`<Radio /> Radio render variants should have id 1`] = `
<DocumentFragment>
  .emotion-0 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: var(--pv-size-base-4);
  height: var(--pv-size-base-4);
  border-radius: 50%;
  color: var(--pv-color-gray-6);
  position: relative;
}

.emotion-1 {
  cursor: inherit;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  outline: 0;
  border-radius: 50%;
  border-width: 2px;
  border-style: solid;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  color: var(--pv-color-gray-9);
  border-color: currentColor;
  background-color: transparent;
}

.emotion-1:before {
  top: -7px;
  left: -7px;
  right: -7px;
  bottom: -7px;
  content: "";
  position: absolute;
  border-radius: 50%;
  opacity: 0;
  background-color: currentColor;
  -webkit-transition: opacity 200ms;
  transition: opacity 200ms;
}

.emotion-1:checked+[aria-hidden] {
  color: var(--pv-color-primary);
  opacity: 1;
}

.emotion-1:not(:disabled) {
  cursor: pointer;
}

.emotion-1:not(:disabled):checked {
  color: var(--pv-color-primary-shade-1);
}

.emotion-1:not(:disabled):hover:before {
  opacity: 0.18;
}

.emotion-1:not(:disabled):focus:before {
  opacity: 0.23;
}

.emotion-1:not(:disabled):active:before {
  opacity: 0.3;
}

.emotion-1:disabled {
  cursor: not-allowed;
  color: var(--pv-color-gray-6);
}

.emotion-1:disabled+[aria-hidden] {
  color: inherit;
}

.emotion-1:disabled:checked {
  color: var(--pv-color-gray-7);
}

.emotion-2 {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  pointer-events: none;
}

<label
    class="emotion-0"
    for="test-id"
  >
    <input
      class="emotion-1"
      id="test-id"
      type="radio"
    />
    <svg
      aria-hidden="true"
      class="emotion-2"
      fill="none"
      height="24px"
      viewBox="0 0 24 24"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        fill="currentColor"
        r="6"
      />
    </svg>
  </label>
</DocumentFragment>
`;

exports[`<Radio /> Radio render variants should have name attr 1`] = `
<DocumentFragment>
  .emotion-0 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: var(--pv-size-base-4);
  height: var(--pv-size-base-4);
  border-radius: 50%;
  color: var(--pv-color-gray-6);
  position: relative;
}

.emotion-1 {
  cursor: inherit;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  outline: 0;
  border-radius: 50%;
  border-width: 2px;
  border-style: solid;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  color: var(--pv-color-gray-9);
  border-color: currentColor;
  background-color: transparent;
}

.emotion-1:before {
  top: -7px;
  left: -7px;
  right: -7px;
  bottom: -7px;
  content: "";
  position: absolute;
  border-radius: 50%;
  opacity: 0;
  background-color: currentColor;
  -webkit-transition: opacity 200ms;
  transition: opacity 200ms;
}

.emotion-1:checked+[aria-hidden] {
  color: var(--pv-color-primary);
  opacity: 1;
}

.emotion-1:not(:disabled) {
  cursor: pointer;
}

.emotion-1:not(:disabled):checked {
  color: var(--pv-color-primary-shade-1);
}

.emotion-1:not(:disabled):hover:before {
  opacity: 0.18;
}

.emotion-1:not(:disabled):focus:before {
  opacity: 0.23;
}

.emotion-1:not(:disabled):active:before {
  opacity: 0.3;
}

.emotion-1:disabled {
  cursor: not-allowed;
  color: var(--pv-color-gray-6);
}

.emotion-1:disabled+[aria-hidden] {
  color: inherit;
}

.emotion-1:disabled:checked {
  color: var(--pv-color-gray-7);
}

.emotion-2 {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  pointer-events: none;
}

<label
    class="emotion-0"
    for="-borvfyJmvyc2HWsC_uCw"
  >
    <input
      class="emotion-1"
      id="-borvfyJmvyc2HWsC_uCw"
      name="test-name"
      type="radio"
    />
    <svg
      aria-hidden="true"
      class="emotion-2"
      fill="none"
      height="24px"
      viewBox="0 0 24 24"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        fill="currentColor"
        r="6"
      />
    </svg>
  </label>
</DocumentFragment>
`;

exports[`<Radio /> Radio render variants should have required 1`] = `
<DocumentFragment>
  .emotion-0 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: var(--pv-size-base-4);
  height: var(--pv-size-base-4);
  border-radius: 50%;
  color: var(--pv-color-gray-6);
  position: relative;
}

.emotion-1 {
  cursor: inherit;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  outline: 0;
  border-radius: 50%;
  border-width: 2px;
  border-style: solid;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  color: var(--pv-color-gray-9);
  border-color: currentColor;
  background-color: transparent;
}

.emotion-1:before {
  top: -7px;
  left: -7px;
  right: -7px;
  bottom: -7px;
  content: "";
  position: absolute;
  border-radius: 50%;
  opacity: 0;
  background-color: currentColor;
  -webkit-transition: opacity 200ms;
  transition: opacity 200ms;
}

.emotion-1:checked+[aria-hidden] {
  color: var(--pv-color-primary);
  opacity: 1;
}

.emotion-1:not(:disabled) {
  cursor: pointer;
}

.emotion-1:not(:disabled):checked {
  color: var(--pv-color-primary-shade-1);
}

.emotion-1:not(:disabled):hover:before {
  opacity: 0.18;
}

.emotion-1:not(:disabled):focus:before {
  opacity: 0.23;
}

.emotion-1:not(:disabled):active:before {
  opacity: 0.3;
}

.emotion-1:disabled {
  cursor: not-allowed;
  color: var(--pv-color-gray-6);
}

.emotion-1:disabled+[aria-hidden] {
  color: inherit;
}

.emotion-1:disabled:checked {
  color: var(--pv-color-gray-7);
}

.emotion-2 {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  pointer-events: none;
}

<label
    class="emotion-0"
    for="uEEv7YgF9eqZNv839La6A"
  >
    <input
      class="emotion-1"
      id="uEEv7YgF9eqZNv839La6A"
      required=""
      type="radio"
    />
    <svg
      aria-hidden="true"
      class="emotion-2"
      fill="none"
      height="24px"
      viewBox="0 0 24 24"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        fill="currentColor"
        r="6"
      />
    </svg>
  </label>
</DocumentFragment>
`;

exports[`<Radio /> Radio render variants should have test id 1`] = `
<DocumentFragment>
  .emotion-0 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: var(--pv-size-base-4);
  height: var(--pv-size-base-4);
  border-radius: 50%;
  color: var(--pv-color-gray-6);
  position: relative;
}

.emotion-1 {
  cursor: inherit;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  outline: 0;
  border-radius: 50%;
  border-width: 2px;
  border-style: solid;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  color: var(--pv-color-gray-9);
  border-color: currentColor;
  background-color: transparent;
}

.emotion-1:before {
  top: -7px;
  left: -7px;
  right: -7px;
  bottom: -7px;
  content: "";
  position: absolute;
  border-radius: 50%;
  opacity: 0;
  background-color: currentColor;
  -webkit-transition: opacity 200ms;
  transition: opacity 200ms;
}

.emotion-1:checked+[aria-hidden] {
  color: var(--pv-color-primary);
  opacity: 1;
}

.emotion-1:not(:disabled) {
  cursor: pointer;
}

.emotion-1:not(:disabled):checked {
  color: var(--pv-color-primary-shade-1);
}

.emotion-1:not(:disabled):hover:before {
  opacity: 0.18;
}

.emotion-1:not(:disabled):focus:before {
  opacity: 0.23;
}

.emotion-1:not(:disabled):active:before {
  opacity: 0.3;
}

.emotion-1:disabled {
  cursor: not-allowed;
  color: var(--pv-color-gray-6);
}

.emotion-1:disabled+[aria-hidden] {
  color: inherit;
}

.emotion-1:disabled:checked {
  color: var(--pv-color-gray-7);
}

.emotion-2 {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  pointer-events: none;
}

<label
    class="emotion-0"
    data-testid="test-id"
    for="kGl_h_3iKGNt7O2ROMHKR"
  >
    <input
      class="emotion-1"
      id="kGl_h_3iKGNt7O2ROMHKR"
      type="radio"
    />
    <svg
      aria-hidden="true"
      class="emotion-2"
      fill="none"
      height="24px"
      viewBox="0 0 24 24"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        fill="currentColor"
        r="6"
      />
    </svg>
  </label>
</DocumentFragment>
`;

exports[`<Radio /> Radio render variants should render as default 1`] = `
<DocumentFragment>
  .emotion-0 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: var(--pv-size-base-4);
  height: var(--pv-size-base-4);
  border-radius: 50%;
  color: var(--pv-color-gray-6);
  position: relative;
}

.emotion-1 {
  cursor: inherit;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  outline: 0;
  border-radius: 50%;
  border-width: 2px;
  border-style: solid;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  color: var(--pv-color-gray-9);
  border-color: currentColor;
  background-color: transparent;
}

.emotion-1:before {
  top: -7px;
  left: -7px;
  right: -7px;
  bottom: -7px;
  content: "";
  position: absolute;
  border-radius: 50%;
  opacity: 0;
  background-color: currentColor;
  -webkit-transition: opacity 200ms;
  transition: opacity 200ms;
}

.emotion-1:checked+[aria-hidden] {
  color: var(--pv-color-primary);
  opacity: 1;
}

.emotion-1:not(:disabled) {
  cursor: pointer;
}

.emotion-1:not(:disabled):checked {
  color: var(--pv-color-primary-shade-1);
}

.emotion-1:not(:disabled):hover:before {
  opacity: 0.18;
}

.emotion-1:not(:disabled):focus:before {
  opacity: 0.23;
}

.emotion-1:not(:disabled):active:before {
  opacity: 0.3;
}

.emotion-1:disabled {
  cursor: not-allowed;
  color: var(--pv-color-gray-6);
}

.emotion-1:disabled+[aria-hidden] {
  color: inherit;
}

.emotion-1:disabled:checked {
  color: var(--pv-color-gray-7);
}

.emotion-2 {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  pointer-events: none;
}

<label
    class="emotion-0"
    for="BwgN0jCpmMZX9Qbxx5B61"
  >
    <input
      class="emotion-1"
      id="BwgN0jCpmMZX9Qbxx5B61"
      type="radio"
    />
    <svg
      aria-hidden="true"
      class="emotion-2"
      fill="none"
      height="24px"
      viewBox="0 0 24 24"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        fill="currentColor"
        r="6"
      />
    </svg>
  </label>
</DocumentFragment>
`;
